--- a/composer.json
+++ b/composer.json
@@ -33,6 +33,8 @@
     },
     "require-dev": {
         "omnipay/tests": "~2.0",
+        "phpunit/phpunit": "~3.7.0",
+        "mockery/mockery": "^0.9.5",
         "scrutinizer/ocular": "~1.1"
     },
     "scripts": {
